# voxl_mpa_to_ros2

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  LICENSE  README.md  build.sh  clean.sh  deploy_to_voxl.sh  install_build_deps.sh  install_foxy.sh  make_package.sh
bash_profile/: source_foxy_setup.sh
colcon_ws/src/: .gitignore
colcon_ws/src/sentinel_rtsp_relay/: CMakeLists.txt  package.xml
colcon_ws/src/sentinel_rtsp_relay/launch/: mpa_plus_rtsp.launch.xml
colcon_ws/src/sentinel_rtsp_relay/src/: rtsp_relay_node.cpp
colcon_ws/src/voxl_mpa_to_ros2/: CMakeLists.txt  package.xml
colcon_ws/src/voxl_mpa_to_ros2/include/voxl_mpa_to_ros2/: interface_manager.h  interface_manager.hpp
colcon_ws/src/voxl_mpa_to_ros2/include/voxl_mpa_to_ros2/interfaces/: ai_detection_interface.h  ai_detection_interface.hpp  all_interfaces.h  all_interfaces.hpp  camera_interface.h  camera_interface.hpp  generic_interface.h  generic_interface.hpp  imu_interface.hpp  point_cloud_interface.h  point_cloud_interface.hpp  pose_vel_6dof_interface.h  pose_vel_6dof_interface.hpp  qvio_interface.h  qvio_interface.hpp  stereo_interface.h  stereo_interface.hpp  tag_interface.hpp
colcon_ws/src/voxl_mpa_to_ros2/launch/: voxl_mpa_to_ros2.launch
colcon_ws/src/voxl_mpa_to_ros2/src/: interface_manager.cpp  mpa_ros_node.cpp
colcon_ws/src/voxl_mpa_to_ros2/src/interfaces/: ai_detection_interface.cpp  camera_interface.cpp  imu_interface.cpp  point_cloud_interface.cpp  pose_vel_6dof_interface.cpp  qvio_interface.cpp  stereo_interface.cpp  tag_interface.cpp
colcon_ws/src/voxl_mpa_to_ros2/src/utils/: camera_helpers.cpp  common_utils.cpp
colcon_ws/src/voxl_offboard_figure8/: package.xml  setup.cfg  setup.py
colcon_ws/src/voxl_offboard_figure8/voxl_offboard_figure8/: voxl_offboard_figure8.py
pkg/control/: control  postinst
scripts/: voxl-configure-mpa-to-ros2
src/voxl_mpa_to_ros2/: CMakeLists.txt  package.xml
src/voxl_mpa_to_ros2/include/voxl_mpa_to_ros2/interfaces/: all_interfaces.h  camera_interface.h  imu_interface.h  pose_vel_6dof_interface.h
src/voxl_mpa_to_ros2/include/voxl_mpa_to_ros2/utils/: camera_helpers.h  common_utils.h
src/voxl_mpa_to_ros2/src/: interface_manager.cpp
src/voxl_mpa_to_ros2/src/interfaces/: camera_interface.cpp  imu_interface.cpp  point_cloud_interface.cpp  pose_vel_6dof_interface.cpp  stereo_interface.cpp
src/voxl_mpa_to_ros2/src/utils/: camera_helpers.cpp
src/voxl_msgs/: CMakeLists.txt  package.xml
src/voxl_msgs/msg/: Poseveldof.msg
